bin_PROGRAMS = spv
spv_SOURCES = addr.cc addr.h buffer.cc buffer.h chain.cc chain.h client.cc client.h connection.cc connection.h constants.cc constants.h decoders.cc encoder.cc encoder.h fields.cc fields.h logging.h main.cc message.cc message.h peer.cc peer.h pow.cc pow.h util.cc util.h uvw.cc uvw.h
spv_CFLAGS = $(libuv_CFLAGS)
spv_LDADD = $(libuv_LIBS)
